[package]
name = "music_sheet_man"
version = "0.1.0"
edition = "2021" #Cargo edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking","json"] }
scraper = "0.18.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"